# auto-shop-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dataset.sql  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
auto_shop_app/: app.py  schema.sql
auto_shop_app/templates/: index.html  orders.html  statistics.html
docker/: init-db.sh
docs/: conf.py  index.rst
templates/: base.html  cars.html  clients.html  new_order.html  orders.html
