[build-system]
requires = ["setuptools>=69", "wheel", "Sphinx>=7.0,<9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-shop-app"
version = "0.1.0"
description = "Flask application for auto service management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0,<4.0",
]

[project.scripts]
auto-shop-app = "auto_shop_app.app:main"

[tool.setuptools]
packages = ["auto_shop_app"]
include-package-data = true

[tool.setuptools.package-data]
auto_shop_app = ["templates/*.html", "schema.sql"]
